--- a/GOAT.html
+++ b/GOAT.html
@@ -18,7 +18,7 @@
 </div>
 
 <h1>Lionel Messi</h1>
-   
+
 <h2>The Greatest Of All Time</h2>
 
 <h3>"He was beautiful. He was the point of difference. He has always been the point of difference.
@@ -26,9 +26,8 @@ Unparalleled, and maybe today, there will, of course, be those who argue. Always
 But as he falls in love with the object in the world that his heart most desired, it is hard to escape the supposition that he has rendered himself today
 - the Greatest of All Time,"</h3>
 
-<img class="Left" src="Worldcup.jpg" alt="">
-
-<img class="Right" src="CopaAmerica.jpg" alt="">
+<img class="LeftPicture" src="Worldcup.jpg" alt="">
+<img class="RightPicture" src="CopaAmerica.jpg" alt="">
 
 
 </body>
