--- a/Index.html
+++ b/Index.html
@@ -16,8 +16,15 @@
     <a id="Club" href="Club.html">Club</a>
     <a href="GOAT.html">GOAT</a>
 </div>
-        
-<img class="Middle" src="Messi.jpg" alt="">
+
+
+<h1>Lionel Messi</h1>
+
+<div class="Info">
+<p>PLACE OF BIRTH: Rosario, Argentina </p></div>
+<div><p>DATE OF BIRTH: 24/06/1987</p></div>
+
+<img class="MiddlePicture" src="Messi.jpg" alt="">
 
 
 </body>
