--- a/GOAT.html
+++ b/GOAT.html
@@ -13,7 +13,7 @@
 <div class="Menu">
     <div class="submenu">
     <a id="Home" href="Index.html">Home</a>
-    <a id="Club" href="Club.html">Club</a>
+    <a id="Career" href="Career.html">Career</a>
     <a href="GOAT.html">GOAT</a>
 </div>
 
@@ -26,8 +26,8 @@ Unparalleled, and maybe today, there will, of course, be those who argue. Always
 But as he falls in love with the object in the world that his heart most desired, it is hard to escape the supposition that he has rendered himself today
 - the Greatest of All Time,"</h3>
 
-<img class="LeftPicture" src="Worldcup.jpg" alt="">
-<img class="RightPicture" src="CopaAmerica.jpg" alt="">
+<img class="GOATLeft" src="Worldcup.jpg" alt="">
+<img class="GOATRight" src="CopaAmerica.jpg" alt="">
 
 
 </body>
