--- a/Index.html
+++ b/Index.html
@@ -13,18 +13,14 @@
 <div class="Menu">
     <div class="submenu">
     <a id="Home" href="Index.html">Home</a>
-    <a id="Club" href="Club.html">Club</a>
+    <a id="Career" href="Career.html">Career</a>
     <a href="GOAT.html">GOAT</a>
 </div>
 
-
 <h1>Lionel Messi</h1>
 
-<div class="Info">
-<p>PLACE OF BIRTH: Rosario, Argentina </p></div>
-<div><p>DATE OF BIRTH: 24/06/1987</p></div>
 
-<img class="MiddlePicture" src="Messi.jpg" alt="">
+<img class="IndexMiddle" src="Messi.jpg" alt="">
 
 
 </body>
