--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,8 @@
 <head>
     <title>Eindopdracht</title>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="Stylesheet" href="Stylesheet.css">
 </head>
 <body class="body">
