--- a/Career.html
+++ b/Career.html
@@ -2,84 +2,90 @@
 <html lang="en">
 
 <head>
-    <title>Eindopdracht</title>
+    <title>Eindopdracht Rishano</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="Stylesheet" href="css/Stylesheet.css">
 </head>
 
 <body class="body">
 
     <header class="header">
+        <a id="Home" href="Index.html">
+            <img class="logo" src="images/messilogo.png" alt="">
+        </a>
         <div class="Menu">
-            <div class="submenu">
-                <a id="Home" href="Index.html">Home</a>
-                <a id="Career" href="Career.html">Career</a>
-                <a id="GOAT" href="GOAT.html">GOAT</a>
-            </div>
+            <a id="Home" href="Index.html">Home</a>
+            <a id="Career" href="Career.html">Career</a>
+            <a id="GOAT" href="GOAT.html">GOAT</a>
     </header>
 
     <div class="main">
 
         <div class="career-container">
-        <div>
-            <div class="titel1">
-                <h4>Jeugdteam</h4>
+            <div>
+                <div class="titel1">
+                    <h4>Jeugdteam</h4>
+                </div>
+
+                <div class="Jeugdteam">
+                    <h5>Messi begon op vierjarige leeftijd met voetballen bij de buurtclub Grandoli FC,
+                        die door zijn vader werd geleid. Toen hij zeven jaar werd,
+                        mocht hij zich inschrijven bij Newell's Old Boys en daarna bij de cantera (jeugdopleiding) van
+                        FC
+                        Barcelona.
+                        In het seizoen 2002/03 vormde hij samen met onder meer Cesc Fàbregas,
+                        Gerard Piqué, Marc Valiente en Víctor Vázquez in de Cadete A het Baby Dream Team.
+                        Via Barça C en Barça B werkte Messi zich op naar de hoofdselectie.</h5>
+                </div>
             </div>
 
-            <div class="Jeugdteam">
-                <h5>Messi begon op vierjarige leeftijd met voetballen bij de buurtclub Grandoli FC,
-                    die door zijn vader werd geleid. Toen hij zeven jaar werd,
-                    mocht hij zich inschrijven bij Newell's Old Boys en daarna bij de cantera (jeugdopleiding) van FC
-                    Barcelona.
-                    In het seizoen 2002/03 vormde hij samen met onder meer Cesc Fàbregas,
-                    Gerard Piqué, Marc Valiente en Víctor Vázquez in de Cadete A het Baby Dream Team.
-                    Via Barça C en Barça B werkte Messi zich op naar de hoofdselectie.</h5>
-            </div>
-        </div>
+            <div>
+                <div class="titel2">
+                    <h4>Debuut</h4>
+                </div>
 
-        <div>
-            <div class="titel2">
-                <h4>Debuut</h4>
-            </div>
-
-            <div class="Debuut">
-                <h5>Op 16 november 2003 debuteerde Messi in het eerste elftal van FC Barcelona
-                    in een oefenwedstrijd tegen Porto ter inwijding van het Estádio do Dragão. In de 74e minuut kwam
-                    hij als vervanger van Fernando Navarro in het veld. Met een leeftijd van 16 jaar,
-                    4 maanden en 23 dagen was Messi na Paulino Alcántara en Haruna Babangida de jongste debutant in
-                    de geschiedenis van de Catalaanse club.[11][12] Op 16 oktober 2004 speelde Messi onder trainer
-                    Frank Rijkaard zijn eerste officiële wedstrijd voor Barça in het uitduel met stadgenoot Espanyol.
-                    Hij was toen de op twee na jongste debutant voor Barcelona en de jongste speler van Barcelona
-                    die in de Primera División speelde.</h5>
-            </div>
-        </div>
-
-        <div>
-            <div class="titel3">
-                <h4>Transfer</h4>
+                <div class="Debuut">
+                    <h5>Op 16 november 2003 debuteerde Messi in het eerste elftal van FC Barcelona
+                        in een oefenwedstrijd tegen Porto ter inwijding van het Estádio do Dragão. In de 74e minuut kwam
+                        hij als vervanger van Fernando Navarro in het veld. Met een leeftijd van 16 jaar,
+                        4 maanden en 23 dagen was Messi na Paulino Alcántara en Haruna Babangida de jongste debutant in
+                        de geschiedenis van de Catalaanse club.[11][12] Op 16 oktober 2004 speelde Messi onder trainer
+                        Frank Rijkaard zijn eerste officiële wedstrijd voor Barça in het uitduel met stadgenoot
+                        Espanyol.
+                        Hij was toen de op twee na jongste debutant voor Barcelona en de jongste speler van Barcelona
+                        die in de Primera División speelde.</h5>
+                </div>
             </div>
 
-            <div class="Transfer">
-                <h5>Op 10 augustus 2021 maakte Paris Saint-Germain via officiële kanalen de komst
-                    van Messi bekend. Messi tekende een contract tot medio 2023 met de optie voor nog een jaar.
-                    Direct na de transfer bood teamgenoot en vriend Neymar zijn rugnummer 10 aan.
-                    De Argentijn koos er echter voor om te gaan spelen met het rugnummer 30,
-                    het nummer waarmee hij debuteerde in het eerste elftal van FC Barcelona.</h5>
+            <div>
+                <div class="titel3">
+                    <h4>Transfer</h4>
+                </div>
+
+                <div class="Transfer">
+                    <h5>Op 10 augustus 2021 maakte Paris Saint-Germain via officiële kanalen de komst
+                        van Messi bekend. Messi tekende een contract tot medio 2023 met de optie voor nog een jaar.
+                        Direct na de transfer bood teamgenoot en vriend Neymar zijn rugnummer 10 aan.
+                        De Argentijn koos er echter voor om te gaan spelen met het rugnummer 30,
+                        het nummer waarmee hij debuteerde in het eerste elftal van FC Barcelona.</h5>
+                </div>
             </div>
-        </div>
         </div>
 
         <img class="CareerRight" src="images/MessiYouth.jpg" alt="">
 
     </div>
 
-    <footer class="footer">
-        © Rishano Ilahi
+    <footer>
+        <div class="footer-content">
+            <p>Rishano Ilahi</p>
+            <p>2176219</p>
+            <p><a href="mailto:2176219@talnet.nl">2176219@talnet.nl</a></p>
+        </div>
+        <div class="copyright"> © Rishano Ilahi </div>
     </footer>
-
-
-
 </body>
+
+</html>
