--- a/GOAT.html
+++ b/GOAT.html
@@ -2,17 +2,19 @@
 <html lang="en">
 
 <head>
-    <title>Eindopdracht</title>
+    <title>Eindopdracht Rishano</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="Stylesheet" href="css/Stylesheet.css">
 </head>
 
-<body class="body">
+<body>
 
     <header class="header">
+        <a id="Home" href="Index.html">
+            <img class="logo" src="images/messilogo.png" alt="">
+        </a>
         <div class="Menu">
             <a id="Home" href="Index.html">Home</a>
             <a id="Career" href="Career.html">Career</a>
@@ -35,7 +37,7 @@
             </h3>
 
             <div class="gallery-container">
-                <div>
+                <div class="gallery-grid-container">
                     <div class="gallery">
                         <img class="GOATLeft" src="images/Worldcup.jpg" alt="">
                     </div>
@@ -51,8 +53,6 @@
                     <div class="gallery">
                         <img class="GOATRight" src="images/family.jpeg" alt="">
                     </div>
-                </div>
-                <div>
                     <div class="gallery">
                         <img class="GOATLeft" src="images/Worldcup.jpg" alt="">
                     </div>
@@ -71,15 +71,17 @@
                 </div>
             </div>
         </div>
-
-
-
-
     </div>
 
-    <footer class="footer">
-        <div>© Rishano Ilahi</div>
+    <footer>
+        <div class="footer-content">
+            <p>Rishano Ilahi</p>
+            <p>2176219</p>
+            <p><a href="mailto:2176219@talnet.nl">2176219@talnet.nl</a></p>
+        </div>
+        <div class="copyright"> © Rishano Ilahi </div>
     </footer>
 
-
 </body>
+
+</html>
