--- a/Index.html
+++ b/Index.html
@@ -2,16 +2,18 @@
 <html lang="en">
 
 <head>
-    <title>Eindopdracht</title>
+    <title>Eindopdracht Rishano</title>
     <meta charset="UTF-8">
-    <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="Stylesheet" href="css/Stylesheet.css">
 </head>
 
-<body class="body">
+<body>
 
     <header class="header">
+        <a id="Home" href="Index.html">
+            <img class="logo" src="images/messilogo.png" alt="">
+        </a>
         <div class="Menu">
             <a id="Home" href="Index.html">Home</a>
             <a id="Career" href="Career.html">Career</a>
@@ -21,7 +23,7 @@
 
     <div class="main">
         <img class="IndexLeft" src="images/Messi.jpg" alt="">
-        <div>
+        <div class="content">
             <h1>Lionel Messi</h1>
 
             <h2>Wie is Lionel Messi?</h2>
@@ -33,15 +35,24 @@
                 , waar hij al zijn successen behaalde totdat hij in augustus 2021 gedwongen de club verliet
                 en een tweejarig contract tekende bij Paris Saint-Germain. Vanwege zijn lengte en snelheid
                 draagt hij de bijnaam La Pulga</h3>
+
+                <button onClick="window.open('https://nl.wikipedia.org/wiki/Lionel_Messi', '_blank');">
+                    Klik hier voor meer informatie over Messi
+                </button>
         </div>
 
         <img class="IndexRight" src="images/Msn.jpg" alt="">
     </div>
 
 
-    <footer class="footer">
-        © Rishano Ilahi
+    <footer>
+        <div class="footer-content">
+            <p>Rishano Ilahi</p>
+            <p>2176219</p>
+            <p><a href="mailto:2176219@talnet.nl">2176219@talnet.nl</a></p>
+        </div>
+        <div class="copyright"> © Rishano Ilahi </div>
     </footer>
-
-
 </body>
+
+</html>
